--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Are You A Mature Christian?</h1>
+
+<a href="LovesLikeJesus.html">Loves like Jesus</a>
+Faith in Jesus
+Time with Jesus
+Lives for Jesus
+Talks about Jesus
+Looks like Jesus
