--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Are You A Mature Christian?</h1>
 
-<a href="LovesLikeJesus.html">Loves like Jesus</a>
-Faith in Jesus
-Time with Jesus
-Lives for Jesus
-Talks about Jesus
-Looks like Jesus
+<a href="LovesLikeJesus.html">Loves like Jesus</a><br/>
+<a href="TrustInJesus.html">Trust in Jesus</a><br/>
+<a href="TimeWithJesus.html">Time with Jesus</a><br/>
+<a href="LivesForJesus.html">Lives for Jesus</a><br/>
+<a href="TalksAboutJesus.html">Talks about Jesus</a><br/>
+<a href="LooksLikeJesus.html">Looks like Jesus</a>
