--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -1,1 +1,13 @@
 <h1>Trust in Jesus</h1>
+
+More Than Existence<br/>
+Revealing God<br/>
+Knowledge of God<br/>
+Baptism – Entry into Community<br/>
+Communion – Shared Community<br/>
+Devotion to Christ<br/>
+Empowered by the Holy Spirit<br/>
+Faith Takes Action<br/>
+Return and Resurrection<br/>
+News to Share<br/>
+Endurance<br/>
