--- a/TimeWithJesus.html
+++ b/TimeWithJesus.html
@@ -1,1 +1,11 @@
 <h1>Time with Jesus</h1>
+
+Discovering God’s Will Takes Time<br/>
+Submitting to the Lord<br/>
+Trusting the Lord<br/>
+Spiritual Disciplines<br/>
+Fellowship Through Prayer<br/>
+Fellowship Through Scripture<br/>
+Fellowship in Worship<br/>
+Doing Life Together<br/>
+Time Does Tell<br/>
