--- a/LivesForJesus.html
+++ b/LivesForJesus.html
@@ -1,1 +1,11 @@
 <h1>Lives for Jesus</h1>
+
+Outside the Comfort Zone<br/>
+Inviting Others to Follow<br/>
+Using Our Spiritual Gifts<br/>
+Serving the King<br/>
+Kingdom Giving<br/>
+Investing in Others<br/>
+Living for God<br/>
+Citizen in the Kingdom of God<br/>
+Kingdom Mission<br/>
