--- a/TalksAboutJesus.html
+++ b/TalksAboutJesus.html
@@ -1,1 +1,11 @@
 <h1>Talks about Jesus</h1>
+
+Personal Testimony about Jesus<br/>
+Passing on What We Received<br/>
+Christ Jesus’ Roles<br/>
+The Promised Holy Spirit<br/>
+The Old Testament and Jesus<br/>
+Things to Come<br/>
+Jesus Will Return<br/>
+Bodily Resurrection<br/>
+Speaks like Jesus<br/>
