--- a/LooksLikeJesus.html
+++ b/LooksLikeJesus.html
@@ -1,1 +1,13 @@
 <h1>Looks like Jesus</h1>
+
+Humility<br/>
+Fruit of the Spirit<br/>
+Set Apart<br/>
+Armor of God<br/>
+Ambassador of God’s Kingdom<br/>
+Eternal Perspective<br/>
+Blameless and Above Reproach<br/>
+Sin No More<br/>
+Like Our Teacher<br/>
+
+<a href="index.html">Back to Home Page</a>
