--- a/LivesForJesus.html
+++ b/LivesForJesus.html
@@ -9,3 +9,7 @@ Investing in Others<br/>
 Living for God<br/>
 Citizen in the Kingdom of God<br/>
 Kingdom Mission<br/>
+
+<p>
+<a href="index.html">Back to Home Page</a>
+</p>
