--- a/LovesLikeJesus.html
+++ b/LovesLikeJesus.html
@@ -10,3 +10,7 @@ Forgiving Others<br/>
 Love of Enemy<br/>
 Loving as Christ<br/>
 Greater Love<br/>
+
+<p>
+<a href="index.html">Back to Home Page</a>
+</p>
