--- a/TalksAboutJesus.html
+++ b/TalksAboutJesus.html
@@ -9,3 +9,7 @@ Things to Come<br/>
 Jesus Will Return<br/>
 Bodily Resurrection<br/>
 Speaks like Jesus<br/>
+
+<p>
+<a href="index.html">Back to Home Page</a>
+</p>
