--- a/TimeWithJesus.html
+++ b/TimeWithJesus.html
@@ -9,3 +9,7 @@ Fellowship Through Scripture<br/>
 Fellowship in Worship<br/>
 Doing Life Together<br/>
 Time Does Tell<br/>
+
+<p>
+<a href="index.html">Back to Home Page</a>
+</p>
