Spacing and Back to home

--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -11,3 +11,8 @@ Faith Takes Action<br/>
 Return and Resurrection<br/>
 News to Share<br/>
 Endurance<br/>
+
+<p>
+<a href="index.html">Back to Home Page</a>
+</p>
+    
