Adding styles for site

--- a/LivesForJesus.html
+++ b/LivesForJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Lives for Jesus</h1>
 
 Outside the Comfort Zone<br/>
@@ -13,3 +19,6 @@ Kingdom Mission<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
+
+</body>
+</html>
