--- a/LooksLikeJesus.html
+++ b/LooksLikeJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Looks like Jesus</h1>
 
 Humility<br/>
@@ -13,3 +19,6 @@ Like Our Teacher<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
+
+</body>
+</html>
