--- a/TalksAboutJesus.html
+++ b/TalksAboutJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Talks about Jesus</h1>
 
 Personal Testimony about Jesus<br/>
@@ -13,3 +19,6 @@ Speaks like Jesus<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
+
+</body>
+</html>
