--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Trust in Jesus</h1>
 
 More Than Existence<br/>
@@ -15,4 +21,6 @@ Endurance<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
-    
+ 
+</body>
+</html>   
