--- a/LovesLikeJesus.html
+++ b/LovesLikeJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Loves Like Jesus</h1>
 
 Love of God<br/>
@@ -14,3 +20,6 @@ Greater Love<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
+
+</body>
+</html>
