--- a/TimeWithJesus.html
+++ b/TimeWithJesus.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>Time with Jesus</h1>
 
 Discovering God’s Will Takes Time<br/>
@@ -13,3 +19,6 @@ Time Does Tell<br/>
 <p>
 <a href="index.html">Back to Home Page</a>
 </p>
+
+</body>
+</html>
