Page background colors

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {background-color: lightgray;}
+  </style>
+</head>
+
+<body>
 <h1>Are You A Mature Christian?</h1>
 
 <a href="LovesLikeJesus.html">Loves like Jesus</a><br/>
@@ -6,3 +15,6 @@
 <a href="LivesForJesus.html">Lives for Jesus</a><br/>
 <a href="TalksAboutJesus.html">Talks about Jesus</a><br/>
 <a href="LooksLikeJesus.html">Looks like Jesus</a>
+ 
+</body>
+</html>   
