--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -1,6 +1,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {background-color: lightsalmon;}
+  </style>
 </head>
 
 <body>
