Titles and style refinements

--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -4,10 +4,11 @@
   <style>
     body {background-color: lightsalmon;}
   </style>
+  <title>Trusts in Jesus</title>
 </head>
 
 <body>
-<h1>Trust in Jesus</h1>
+<h1>Trusts in Jesus</h1>
 
 More Than Existence<br/>
 Revealing God<br/>
