First Level 3 page and trying body class styles

--- a/LovesLikeJesus.html
+++ b/LovesLikeJesus.html
@@ -1,16 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightcoral;}
-  </style>
   <title>Loves like Jesus</title>
 </head>
 
-<body>
+<body class="love">
 <h1>Loves Like Jesus</h1>
 
-Love of God<br/>
+<a href="LoveOfGod.html">Love of God</a><br/>
 Love of Christ<br/>
 Love of Disciples<br/>
 Love of Neighbor<br/>
