--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
@@ -10,12 +11,14 @@
 <body>
 <h1>Are You A Mature Christian?</h1>
 
+<p>
 <a href="LovesLikeJesus.html">Loves like Jesus</a><br/>
 <a href="TrustInJesus.html">Trust in Jesus</a><br/>
 <a href="TimeWithJesus.html">Time with Jesus</a><br/>
 <a href="LivesForJesus.html">Lives for Jesus</a><br/>
 <a href="TalksAboutJesus.html">Talks about Jesus</a><br/>
 <a href="LooksLikeJesus.html">Looks like Jesus</a>
- 
+</p>
+
 </body>
 </html>   
