Corrected page name

--- a/LovesLikeJesus.html
+++ b/LovesLikeJesus.html
@@ -8,7 +8,7 @@
 <body class="love">
 <h1>Loves Like Jesus</h1>
 
-<a href="LoveOfGod.html">Love of God</a><br/>
+<a href="Love-LoveOfGod.html">Love of God</a><br/>
 Love of Christ<br/>
 Love of Disciples<br/>
 Love of Neighbor<br/>
