--- a/LivesForJesus.html
+++ b/LivesForJesus.html
@@ -2,27 +2,24 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightgoldenrodyellow;}
-  </style>
   <title>Lives for Jesus</title>
 </head>
 
-<body>
+<body class="lives">
 <h1>Lives for Jesus</h1>
 
-Outside the Comfort Zone<br/>
-Inviting Others to Follow<br/>
-Using Our Spiritual Gifts<br/>
-Serving the King<br/>
-Kingdom Giving<br/>
-Investing in Others<br/>
-Living for God<br/>
-Citizen in the Kingdom of God<br/>
-Kingdom Mission<br/>
+<h2>Outside the Comfort Zone</h2>
+<h2>Inviting Others to Follow</h2>
+<h2>Spiritual Gifts</h2>
+<h2>Serving the King</h2>
+<h2>Kingdom Giving</h2>
+<h2>Investing in Others</h2>
+<h2>Living for God</h2>
+<h2>Citizen in the Kingdom of God</h2>
+<h2>Kingdom Mission</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
