--- a/LooksLikeJesus.html
+++ b/LooksLikeJesus.html
@@ -2,27 +2,24 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightskyblue;}
-  </style>
   <title>Looks like Jesus</title>
 </head>
 
-<body>
+<body class="looks">
 <h1>Looks like Jesus</h1>
 
-Humility<br/>
-Fruit of the Spirit<br/>
-Set Apart<br/>
-Armor of God<br/>
-Ambassador of God’s Kingdom<br/>
-Eternal Perspective<br/>
-Blameless and Above Reproach<br/>
-Sin No More<br/>
-Like Our Teacher<br/>
+<h2>Humility</h2>
+<h2>Fruit of the Spirit</h2>
+<h2>Set Apart</h2>
+<h2>Armor of God</h2>
+<h2>Ambassador of God’s Kingdom</h2>
+<h2>Eternal Perspective</h2>
+<h2>Blameless and Above Reproach</h2>
+<h2>Sin No More</h2>
+<h2>Like Our Teacher</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
