--- a/Love-LoveOfGod.html
+++ b/Love-LoveOfGod.html
@@ -8,17 +8,17 @@
 <body class="love">
 <h1>Love of God</h1>
 
-Without God<br/>
-Acknowledge God<br/>
-Listen to God<br/>
-Respond to God<br/>
-Surrender to God<br/>
-Trust God<br/>
-Glorify God<br/>
+<h2>Without God</h2>
+<h2>Acknowledge God</h2>
+<h2>Listen to God</h2>
+<h2>Respond to God</h2>
+<h2>Surrender to God</h2>
+<h2>Trust God</h2>
+<h2>Glorify God</h2>
 
 <p>
-    <a href="LovesLikeJesus.html">Back to Loves like Jesus</a>
-    <a href="index.html">Back to Home Page</a>
+    <h2><a href="LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
     
 </body>
