--- a/LovesLikeJesus.html
+++ b/LovesLikeJesus.html
@@ -8,19 +8,19 @@
 <body class="love">
 <h1>Loves Like Jesus</h1>
 
-<a href="Love-LoveOfGod.html">Love of God</a><br/>
-Love of Christ<br/>
-Love of Disciples<br/>
-Love of Neighbor<br/>
-Healthy Love of Self<br/>
-God’s Judgment<br/>
-Forgiving Others<br/>
-Love of Enemy<br/>
-Loving as Christ<br/>
-Greater Love<br/>
+<h2><a href="Love-LoveOfGod.html">Love of God</a></h2>
+<h2>Love of Christ</h2>
+<h2>Love of Disciples</h2>
+<h2>Love of Neighbor</h2>
+<h2>Healthy Love of Self</h2>
+<h2>God’s Judgment</h2>
+<h2>Forgiving Others</h2>
+<h2>Love of Enemy</h2>
+<h2>Loving as Christ</h2>
+<h2>Greater Love</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
