--- a/TimeWithJesus.html
+++ b/TimeWithJesus.html
@@ -2,27 +2,24 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightsteelblue;}
-  </style>
   <title>Time with Jesus</title>
 </head>
 
-<body>
+<body class"time">
 <h1>Time with Jesus</h1>
 
-Discovering God’s Will Takes Time<br/>
-Submitting to the Lord<br/>
-Trusting the Lord<br/>
-Spiritual Disciplines<br/>
-Fellowship Through Prayer<br/>
-Fellowship Through Scripture<br/>
-Fellowship in Worship<br/>
-Doing Life Together<br/>
-Time Does Tell<br/>
+<h2>Discovering God’s Will</h2>
+<h2>Submitting to the Lord</h2>
+<h2>Trusting the Lord</h2>
+<h2>Spiritual Disciplines</h2>
+<h2>Fellowship through Prayer</h2>
+<h2>Fellowship through Scripture</h2>
+<h2>Fellowship in Worship</h2>
+<h2>Doing Life Together</h2>
+<h2>Time Does Tell</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
