--- a/TrustInJesus.html
+++ b/TrustInJesus.html
@@ -2,29 +2,26 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightsalmon;}
-  </style>
   <title>Trusts in Jesus</title>
 </head>
 
-<body>
+<body class="trust">
 <h1>Trusts in Jesus</h1>
 
-More Than Existence<br/>
-Revealing God<br/>
-Knowledge of God<br/>
-Baptism – Entry into Community<br/>
-Communion – Shared Community<br/>
-Devotion to Christ<br/>
-Empowered by the Holy Spirit<br/>
-Faith Takes Action<br/>
-Return and Resurrection<br/>
-News to Share<br/>
-Endurance<br/>
+<h2>More Than Existence</h2>
+<h2>Revealing God</h2>
+<h2>Knowledge of God</h2>
+<h2>Baptism as Entry into Community</h2>
+<h2>Communion as Shared Community</h2>
+<h2>Devotion to Christ</h2>
+<h2>Empowered by the Holy Spirit</h2>
+<h2>Faith Takes Action</h2>
+<h2>Return and Resurrection</h2>
+<h2>News to Share</h2>
+<h2>Endurance</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+  <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
  
 </body>
