--- a/TalksAboutJesus.html
+++ b/TalksAboutJesus.html
@@ -2,27 +2,24 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    body {background-color: lightseagreen;}
-  </style>
   <title>Talks about Jesus</title>
 </head>
 
-<body>
+<body class="talks">
 <h1>Talks about Jesus</h1>
 
-Personal Testimony about Jesus<br/>
-Passing on What We Received<br/>
-Christ Jesus’ Roles<br/>
-The Promised Holy Spirit<br/>
-The Old Testament and Jesus<br/>
-Things to Come<br/>
-Jesus Will Return<br/>
-Bodily Resurrection<br/>
-Speaks like Jesus<br/>
+<h2>Personal Testimony about Jesus</h2>
+<h2>Passing on What I Received</h2>
+<h2>Christ Jesus’ Roles</h2>
+<h2>The Promised Holy Spirit</h2>
+<h2>The Old Testament and Jesus</h2>
+<h2>Things to Come</h2>
+<h2>Jesus Will Return</h2>
+<h2>Bodily Resurrection</h2>
+<h2>Speaks like Jesus</h2>
 
 <p>
-<a href="index.html">Back to Home Page</a>
+    <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
