--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <h1>Are You A Mature Christian?</h1>
 
 <p>
-<a href="LovesLikeJesus.html">Loves like Jesus</a><br/>
-<a href="TrustInJesus.html">Trust in Jesus</a><br/>
-<a href="TimeWithJesus.html">Time with Jesus</a><br/>
-<a href="LivesForJesus.html">Lives for Jesus</a><br/>
-<a href="TalksAboutJesus.html">Talks about Jesus</a><br/>
-<a href="LooksLikeJesus.html">Looks like Jesus</a>
+<h2><a href="LovesLikeJesus.html">Loves like Jesus</a></h2>
+<h2><a href="TrustInJesus.html">Trust in Jesus</a></h2>
+<h2><a href="TimeWithJesus.html">Time with Jesus</a></h2>
+<h2><a href="LivesForJesus.html">Lives for Jesus</a></h2>
+<h2><a href="TalksAboutJesus.html">Talks about Jesus</a></h2>
+<h2><a href="LooksLikeJesus.html">Looks like Jesus</a></h2>
 </p>
 
 </body>
