Style correction for time page. Added scripture and contents table to love of God page.

--- a/TimeWithJesus.html
+++ b/TimeWithJesus.html
@@ -5,7 +5,7 @@
   <title>Time with Jesus</title>
 </head>
 
-<body class"time">
+<body class="time">
 <h1>Time with Jesus</h1>
 
 <h2>Discovering God’s Will</h2>
