--- a/Love-LoveOfGod.html
+++ b/Love-LoveOfGod.html
@@ -8,13 +8,48 @@
 <body class="love">
 <h1>Love of God</h1>
 
-<h2>Without God</h2>
-<h2>Acknowledge God</h2>
-<h2>Listen to God</h2>
-<h2>Respond to God</h2>
-<h2>Surrender to God</h2>
-<h2>Trust God</h2>
-<h2>Glorify God</h2>
+<p class="scripture">
+    And He said to him, "You shall love the LORD your God with all your heart, and with all your soul, and with all your mind.” (Matthew 22:37)
+</p>
+
+<table>
+    <tr>
+        <td>Without God</td>
+        <td>Before we come to know and love God, we live a life of self-sufficiency. We depend on ourselves. We may receive input from those around us, but in the end we make our own decisions. We are without God.  We do not depend on Him, seek Him, listen to Him, or care about Him. If we claim any belief in God’s existence, it has no bearing on our life. This is our condition from birth, from which God desires to deliver us. We do not love God because we love ourselves.</td>
+    </tr>
+    <tr>
+        <td>Acknowledge God</td>
+        <td>The first step in our love’s transformation is initiated by God. We learn how in the course of time, God began revealing Himself to humanity through the line of Abraham, Isaac and Jacob, along with His plan to redeem the fallen creation. Our part in the transformation process kicks in when we acknowledge God and recognize that He exists. But to become a disciple of Jesus Christ, we need to acknowledge God as the only authority and truth; that His is indeed God. We do not really grasp all it encompasses, and we certainly do not grasp the implications it is to have on our life, but we make our first move towards loving God simply by acknowledging that He is God. 
+            Such an acknowledgement in itself is not love, for love is more than that. Every one of us have people in our lives that we acknowledge without describing these connections as grounded in love. The same is true of our relationship with God. We can acknowledge God without loving Him. Still, our simple acknowledgement of God is a necessary step towards maturity.
+        </td>
+    </tr>
+    <tr>
+        <td>Listen to God</td>
+        <td>At some point the Holy Spirit prompts us and enables us to recognize that if we really do believe that God is God, then we need to listen to Him. Thus, we go from simply acknowledging Him to listening to Him. We admit that God does speak to us through the Bible, the Church, and prayer. While each of us is initially drawn to God differently, as a disciple of Jesus Christ we must ultimately pay attention to God for He has chosen to reveal Himself through the Bible as the Father of our Lord Jesus Christ. Listening means tuning into what God has been saying for generations. </td>
+    </tr>
+    <tr>
+        <td>Respond to God</td>
+        <td>While listening to God is necessary, we are not really listening unless we take action in response to what He says. If we do not do what God says, we are deceiving ourselves,  claiming to be mature when in reality we are not. Growth as a disciple stalls if we say we are listening but do not act. However, when we put into practice what we hear, we continue in the direction of maturity.
+            Heart transformation happens as we to listen to God and respond to Him. A love of God has been birthed in us which is now evident to us and to those who know us. This is a sign of the love of God developing in us. We respond to what God says because we are learning to love Him.
+            </td>
+    </tr>
+    <tr>
+        <td>Surrender to God</td>
+        <td>The more we hear and obey God, the more we are drawn by Him, and the greater our love for Him becomes. We eventually reach the point of recognizing that our whole life is to be lived as Christ’s disciple. We sense God calling us to surrender everything to Him. We grasp the depth of God having demonstrated His love for the world in the sending  and death  of Christ. This becomes a major point of transition for us. In the context of loving God, our willingness to completely surrender to Him is an expression of a deep and abiding love for Him. It may be compared to the commitment a man and a woman make when they enter into the marriage covenant. Surrendering to God in love is like saying “I do” to Him, which is to mark our whole life as a disciple, clearly indicating that we love the Lord God exclusively and have no other gods before Him.  Thus, a mature Christian is someone who has surrendered to God and chooses to live for Him, rather than for self. It is at this point where our self-love, though not completely eradicated, has lost the majority of its power. Clearly we are focused on loving God rather loving ourselves.</td>
+    </tr>
+    <tr>
+        <td>Trust God</td>
+        <td>We might think that when we surrender and live for God, we have reached the pinnacle in loving God and maturity, but we have not yet arrived. While our love of God is real and deep, new opportunities for our love to increase come our way. We may not recognize such opportunities when they occur, yet they are part of loving like Christ loves.
+            Growth opportunities come in many forms, each with the potential to increase our faith in God. Our passion for God is enlarged in the midst of challenges which teach us to trust Him in situations and ways that we had not encountered previously. Our love of God grows with our willingness to trust Him, which further increases our love.
+            </td>
+    </tr>
+    <tr>
+        <td>Glorify God</td>
+        <td>As disciples, we continue living grounded in God’s love and our love of Him. Our trust also continues to grow, stirring what becomes our deepest desire, to glorify God. We seek to glorify Him by how we live, in what we say and do not say, and with our every thought and desire. We no longer live for ourselves or even for what God may do in or with our life, but only for His glory. It is not a goal that we reach or an achievement we accomplish, it’s our life lived day in and day out driven by love for God and His glory that matters to us. We are looking more like Christ who only did what the Father told him.  Bringing glory to God marks us as a mature Christian, for loving God is foundational to maturity. Without love we are nothing.  A person not interested in loving God, cannot be called a disciple. As Christ’s disciple, our growth corresponds to our love of God, and our life reflects the depth of our love.
+            Furthermore, it is our calling and privilege to assist others in becoming and growing as Christ’s disciples. We help them explore, discover, grow, and live life centered in loving God, which ultimately surpasses everything that he or she has ever cared about or known.
+            </td>
+    </tr>
+</table>
 
 <p>
     <h2><a href="LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
