Still refining font sizes and table border

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Are You A Mature Christian?</h1>
+<h1>Am I A Mature Christian?</h1>
 
 <p>
 <h2><a href="LovesLikeJesus.html">Loves like Jesus</a></h2>
