Added introduction to home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <h1>Am I A Mature Christian?</h1>
 
 <p>
+    There are a number of characteristics found in the New Testament that paint a picture of a mature Christian. Those characteristics 
+    have been grouped into the six categories found below. Explore the categories to discover the characteristics and the milestones that 
+    are typically encountered as a person moves from being spiritually dead and lost into a mature follower of the Lord Jesus Christ. Blessings
+    as you coorporate with the Holy Spirit at work in forming you into a mature Christian.
+</p>
+
+<p>
 <h2><a href="LovesLikeJesus.html">Loves like Jesus</a></h2>
 <h2><a href="TrustInJesus.html">Trust in Jesus</a></h2>
 <h2><a href="TimeWithJesus.html">Time with Jesus</a></h2>
