--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Am I A Mature Christian?</h1>
 
-<p>
+<p class="intro">
     There are a number of characteristics found in the New Testament that paint a picture of a mature Christian. Those characteristics 
     have been grouped into the six categories found below. Explore the categories to discover the characteristics and the milestones that 
     are typically encountered as a person moves from being spiritually dead and lost into a mature follower of the Lord Jesus Christ. Blessings
