Continuing refinement of intro paragraphs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Am I A Mature Christian?</h1>
+<h1>Am I a Mature Christian?</h1>
 
 <p class="intro">
     There are a number of characteristics found in the New Testament that paint a picture of a mature Christian. Those characteristics 
