Fixed assignment of class

--- a/Love-LoveOfGod.html
+++ b/Love-LoveOfGod.html
@@ -12,11 +12,11 @@
     And He said to him, "You shall love the LORD your God with all your heart, and with all your soul, and with all your mind.” (Matthew 22:37)
 </p>
 
-<p class>
-    <div="intro">
+<p>
+    <div class="intro">
     We are mature in Christ if we have been transformed by God’s love. Encountering His love leads us to love Him in return. We grow as a disciple of Jesus Christ by loving God. There was a time when we only loved ourselves, and had no interest in loving God. In fact, we had no capacity to love Him because we were far from Him.
     </div>
-    <div="intro">
+    <div class="intro">
     But all that changes when, by God’s grace, the gospel penetrates our heart. As a result, we begin learning about God and honestly acknowledge Him as God. We listen to Him and act on what He says, which becomes our way of daily life. Eventually, we sense God asking us to surrender to Him and to trust Him completely. We take this step by offering ourselves to Him in love. From then on, we continue to mature in the midst life’s circumstances. Our trust in God continues to increase, eventually birthing in us a desire to live simply for His glory. Why do we live such a life? Because we have encountered God’s life transforming love and responded to Him in love.  We love like Jesus by loving God.
     </div>
 </p>
