Introducted first folder for category pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-<h2><a href="LovesLikeJesus.html">Loves like Jesus</a></h2>
+<h2><a href="Love/LovesLikeJesus.html">Loves like Jesus</a></h2>
 <h2><a href="TrustInJesus.html">Trust in Jesus</a></h2>
 <h2><a href="TimeWithJesus.html">Time with Jesus</a></h2>
 <h2><a href="LivesForJesus.html">Lives for Jesus</a></h2>
