--- a/Love/Love-LoveOfGod.html
+++ b/Love/Love-LoveOfGod.html
@@ -61,7 +61,7 @@
 </table>
 
 <p>
-    <h2><a href="LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
+    <h2><a href="Love/LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
     <h2><a href="index.html">Back to Home Page</a></h2>
 </p>
     
