--- a/Love/LovesLikeJesus.html
+++ b/Love/LovesLikeJesus.html
@@ -8,7 +8,7 @@
 <body class="love">
 <h1>Loves Like Jesus</h1>
 
-<h2><a href="Love-LoveOfGod.html">Love of God</a></h2>
+<h2><a href="Love/Love-LoveOfGod.html">Love of God</a></h2>
 <h2>Love of Christ</h2>
 <h2>Love of Disciples</h2>
 <h2>Love of Neighbor</h2>
