Refining directory structure and root link

--- a/Loves/Love-LoveOfGod.html
+++ b/Loves/Love-LoveOfGod.html
@@ -61,8 +61,8 @@
 </table>
 
 <p>
-    <h2><a href="Love/LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
-    <h2><a href="index.html">Back to Home Page</a></h2>
+    <h2><a href="Loves/LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
+    <h2><a href="/index.html">Back to Home Page</a></h2>
 </p>
     
 </body>
