--- a/Loves/LovesLikeJesus.html
+++ b/Loves/LovesLikeJesus.html
@@ -8,7 +8,7 @@
 <body class="love">
 <h1>Loves Like Jesus</h1>
 
-<h2><a href="Love/Love-LoveOfGod.html">Love of God</a></h2>
+<h2><a href="Loves/Love-LoveOfGod.html">Love of God</a></h2>
 <h2>Love of Christ</h2>
 <h2>Love of Disciples</h2>
 <h2>Love of Neighbor</h2>
@@ -20,7 +20,7 @@
 <h2>Greater Love</h2>
 
 <p>
-    <h2><a href="index.html">Back to Home Page</a></h2>
+    <h2><a href="/index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
