Still figuring out proper folders referencing

--- a/Loves/LovesLikeJesus.html
+++ b/Loves/LovesLikeJesus.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <title>Loves like Jesus</title>
 </head>
 
 <body class="love">
 <h1>Loves Like Jesus</h1>
 
-<h2><a href="Loves/Love-LoveOfGod.html">Love of God</a></h2>
+<h2><a href="/Loves/Love-LoveOfGod.html">Love of God</a></h2>
 <h2>Love of Christ</h2>
 <h2>Love of Disciples</h2>
 <h2>Love of Neighbor</h2>
