Ttrying to determine Root folder

--- a/Loves/Love-LoveOfGod.html
+++ b/Loves/Love-LoveOfGod.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/MatureChristian/styles.css">
   <title>Love of God</title>
 </head>
 
@@ -61,8 +61,8 @@
 </table>
 
 <p>
-    <h2><a href="Loves/LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
-    <h2><a href="/index.html">Back to Home Page</a></h2>
+    <h2><a href="/MatureChristian/Loves/LovesLikeJesus.html">Back to Loves like Jesus</a></h2>
+    <h2><a href="/MatureChristian/index.html">Back to Home Page</a></h2>
 </p>
     
 </body>
