--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/MatureChristian/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Mature Christian</title>
 </head>
 
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-<h2><a href="/MatureChristian/Loves/LovesLikeJesus.html">Loves like Jesus</a></h2>
+<h2><a href="Loves/LovesLikeJesus.html">Loves like Jesus</a></h2>
 <h2><a href="TrustInJesus.html">Trust in Jesus</a></h2>
 <h2><a href="TimeWithJesus.html">Time with Jesus</a></h2>
 <h2><a href="LivesForJesus.html">Lives for Jesus</a></h2>
