Moved pages to category folders

--- a/Lives/LivesForJesus.html
+++ b/Lives/LivesForJesus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
   <title>Lives for Jesus</title>
 </head>
 
@@ -19,7 +19,7 @@
 <h2>Kingdom Mission</h2>
 
 <p>
-    <h2><a href="index.html">Back to Home Page</a></h2>
+    <h2><a href="../index.html">Back to Home Page</a></h2>
 </p>
 
 </body>
