--- a/Trusts/TrustsInJesus.html
+++ b/Trusts/TrustsInJesus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
   <title>Trusts in Jesus</title>
 </head>
 
@@ -21,7 +21,7 @@
 <h2>Endurance</h2>
 
 <p>
-  <h2><a href="index.html">Back to Home Page</a></h2>
+  <h2><a href="../index.html">Back to Home Page</a></h2>
 </p>
  
 </body>
