--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <p>
 <h2><a href="Loves/LovesLikeJesus.html">Loves like Jesus</a></h2>
-<h2><a href="TrustInJesus.html">Trust in Jesus</a></h2>
-<h2><a href="TimeWithJesus.html">Time with Jesus</a></h2>
-<h2><a href="LivesForJesus.html">Lives for Jesus</a></h2>
-<h2><a href="TalksAboutJesus.html">Talks about Jesus</a></h2>
-<h2><a href="LooksLikeJesus.html">Looks like Jesus</a></h2>
+<h2><a href="Trusts/TrustsInJesus.html">Trust in Jesus</a></h2>
+<h2><a href="Time/TimeWithJesus.html">Time with Jesus</a></h2>
+<h2><a href="Lives/LivesForJesus.html">Lives for Jesus</a></h2>
+<h2><a href="Talks/TalksAboutJesus.html">Talks about Jesus</a></h2>
+<h2><a href="Looks/LooksLikeJesus.html">Looks like Jesus</a></h2>
 </p>
 
 </body>
