Fixing image references

--- a/Loves/LovesLikeJesus.html
+++ b/Loves/LovesLikeJesus.html
@@ -20,7 +20,7 @@
 <h2>Greater Love</h2>
 
 <p>
-    <h2><a src="../images/home-icon.png" href="../index.html">Back to Home Page</a></h2>
+    <h2><a href="../index.html"><img class="nav-icon" src="../images/home-icon.png">Back to Home Page</a></h2>
 </p>
 
 </body>
