Adding to the Loves category

--- a/Loves/LovesLikeJesus.html
+++ b/Loves/LovesLikeJesus.html
@@ -9,9 +9,9 @@
 <h1>Loves Like Jesus</h1>
 
 <h2><a href="Love-LoveOfGod.html">Love of God</a></h2>
-<h2>Love of Christ</h2>
-<h2>Love of Disciples</h2>
-<h2>Love of Neighbor</h2>
+<h2><a href="Love-LoveOfChrist.html">Love of Christ</a></h2>
+<h2><a href="Love-LoveOfDisciples.html">Love of Disciples</a></h2>
+<h2><a href="Love-LoveOfNeighbor.html">Love of Neighbor</a></h2>
 <h2>Healthy Love of Self</h2>
 <h2>God’s Judgment</h2>
 <h2>Forgiving Others</h2>
