Adding tables to love pages. Also added under construction.

--- a/Loves/Love-LoveOfChrist.html
+++ b/Loves/Love-LoveOfChrist.html
@@ -27,6 +27,36 @@
 
 <table>
     <tr>
+        <td>Born Self-Centered</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Hear about Jesus</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>See Jesus for Who He Is</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Listen to Jesus</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Follow Jesus</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Serve Jesus</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Transformed by Jesus</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Christ in Me</td>
+        <td></td>
     </tr>
 </table>
 
