--- a/Loves/Love-LoveOfDisciples.html
+++ b/Loves/Love-LoveOfDisciples.html
@@ -27,6 +27,32 @@
 
 <table>
     <tr>
+        <td>No Word of Life</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Encounter Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Resist Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Accept Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Fellowship with Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Humanity of Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Embrace Disciples</td>
+        <td></td>
     </tr>
 </table>
 
