--- a/Loves/Love-LoveOfNeighbor.html
+++ b/Loves/Love-LoveOfNeighbor.html
@@ -29,6 +29,28 @@
 
 <table>
     <tr>
+        <td>What’s In It For Me</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Something In Common</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Perspective Shift</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Church</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Jesus’ Disciples</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Everyone I Encounter</td>
+        <td></td>
     </tr>
 </table>
 
