--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body class="home">
 <h1>Am I a Mature Christian?</h1>
 
+<img src="images/under-construction.png" alt="Under Construction">
+
 <p class="intro">
     There are a number of characteristics found in the New Testament that paint a picture of a mature Christian. Those characteristics 
     have been grouped into the six categories found below. Explore the categories to discover the characteristics and the milestones that 
