--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body class="home">
 <h1>Am I a Mature Christian?</h1>
 
-<img src="images/under-construction.png" alt="Under Construction">
+<center>
+    <img src="images/under-construction.png" alt="Under Construction">
+</center>
 
 <p class="intro">
     There are a number of characteristics found in the New Testament that paint a picture of a mature Christian. Those characteristics 
